Admin bar on mobile: adding name back in on small screens, but using truncation to make sure it fits the space

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -220,8 +220,16 @@
                 overflow: hidden;
                 #wp-admin-bar-my-openlab-mobile{
                     float: none;
+                    .very-small-size{
+                        display: none;
+                    }
                     @media(max-width: @screen-xxs-max){
-                        display: none !important;
+                        .small-size{
+                            display: none;
+                        }
+                        .very-small-size{
+                            display: block;
+                        }
                     }
                 }
             }
